update printpreview pdf

--- a/src/page_css/css/style.css
+++ b/src/page_css/css/style.css
@@ -315,6 +315,7 @@ input:hover {
   background-color: rgba(0, 0, 0, 0.07);
   border: 2px solid rgba(0, 0, 0, 0.5);
   border-radius: 5px;
+  margin-top: 5%;
 }
 #andere .actBox .checkmark:after {
   content: "";
