--- a/src/page_css/sass/style.scss
+++ b/src/page_css/sass/style.scss
@@ -407,6 +407,7 @@ input:hover {
             background-color: $clr_bg;
             border: 2px solid $clr_border;
             border-radius: 5px;
+            margin-top: 5%;
           }
 
           .checkmark:after {
