--- a/src/page_css/default.css
+++ b/src/page_css/default.css
@@ -497,10 +497,10 @@ input {
   }
 
   #overviews .row td:first-of-type {
-      font-size: 115%;
       font-weight: 700;
       white-space: pre;
       border-left: 0;
+      padding-left: 0;
   }
 
   #overviews .selected {
