--- a/src/page_css/default.css
+++ b/src/page_css/default.css
@@ -541,7 +541,7 @@ input {
 
   #overviews thead {
       position: sticky;
-      top: 11%;
+      top: 50px;
       z-index: 100;
   }
 
@@ -561,6 +561,7 @@ input {
   text-align: center;
   position: sticky;
   top: 0;
+  padding-top: 1%;
   z-index: 100;
   background-color: inherit;
 }
